# code-review-env

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  test_bad.py  test_harness.py
backend/: .env.example  __init__.py  custom_review.py  requirements.txt  server.py
backend/baseline/: run_agent.py
backend/data/: samples.json
backend/env/: __init__.py  ai_grader.py  environment.py  grader.py  models.py  tasks.py
backend/tests/: test_custom_review.py  test_grader.py  test_models.py  test_server.py
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/src/components/: CustomReviewerWorkbench.svelte  ReviewWorkbench.svelte
frontend/src/components/custom-reviewer/: CopyTextButton.svelte  ReviewerCodeDiff.svelte  ReviewerCodeEditor.svelte  ReviewerCodeStats.svelte  ReviewerFindingCard.svelte  ReviewerFlowTimeline.svelte  ReviewerHeroPanel.svelte  ReviewerInputPanel.svelte  ReviewerQuickGoals.svelte  ReviewerResultOverview.svelte  ReviewerResultsPanel.svelte  ReviewerWorkspaceFrame.svelte  editorBehavior.js  highlightCode.js  reviewer.css  shared.js
frontend/src/components/review-workbench/: CelebrationOverlay.svelte  DiffCodeBlock.svelte  EvaluationPanel.svelte  FixDiffPanel.svelte  ObservationPanel.svelte  ScenarioSidebar.svelte  SubmissionPanel.svelte  TopBar.svelte  diffUtils.js  reviewWorkbench.css  shared.js
frontend/src/layouts/: BaseLayout.astro
frontend/src/lib/: api.js
frontend/src/pages/: index.astro  reviewer.astro
frontend/src/styles/: global.css
server/: app.py
(+1 files in other folders)
